--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".bmob.file.BmobFileActivity" >
-
+    android:paddingTop="@dimen/activity_vertical_margin" >
+    
     <ListView
         android:id="@+id/listview"
         android:layout_width="fill_parent"
@@ -17,5 +16,4 @@
         android:listSelector="@drawable/selector_list_item" >
     </ListView>
 
-</RelativeLayout>
-
+</LinearLayout>
